# study-with-ai

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_course_plan_fields.py  0003_llm_call_output_audit_fields.py  0004_practice_tasks_and_llm_task_type.py
docs/pr/: pr-02-description.md
src/praktikum_app/: __init__.py  __main__.py
src/praktikum_app/application/: course_decomposition.py  import_pdf_use_case.py  import_persistence.py  import_text_use_case.py  in_memory_import_store.py  llm.py  llm_audit.py  practice_generation.py  text_normalizer.py
src/praktikum_app/domain/: course_plan.py  import_text.py  practice.py
src/praktikum_app/infrastructure/: logging_config.py
tests/: __init__.py  conftest.py  pdf_fixture_utils.py  test_alembic_migration_smoke.py  test_api_keys_dialog.py  test_app_smoke.py  test_course_plan_dialog_smoke.py  test_course_plan_repository_sqlite.py  test_course_plan_schema.py  test_generate_practice_use_case.py  test_import_dialog_smoke.py  test_import_repository_sqlite.py  test_import_text_use_case.py  test_keyring_store.py  test_llm_audit_repository.py  test_llm_clients_contract.py  test_llm_config.py  test_llm_retry.py  test_llm_router.py  test_main_window_courses_list.py  test_main_window_persistence.py  test_parse_course_use_case.py  test_pdf_extraction_pipeline.py  test_practice_dialog_smoke.py  test_practice_repository_sqlite.py  test_practice_schema.py  test_text_normalizer.py  test_ui_shell_components.py
(+39 files in other folders)
